Updating color scheme and adding Samsung section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h3 class="section-subheading text-muted">
                         Owner operated since 1999 | License #767970 B, C20, C36
                         <br/><br/>
-                        Full service company for residential, light commercial, and manufactured housing. From new installation to maintenance and repair of heating, air conditioning, tank and tankless water heaters and evaporative coolers.
+                        Full service company for residential, light commercial, and manufactured housing. From new installation to maintenance and repair of heating, air conditioning, and tankless water heaters.
                     </h3>
                 </div>
             </div>
@@ -148,6 +148,19 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Friedrich</h4>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="https://samsunghvac.com/" class="portfolio-link" target="_blank">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/samsung.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Samsung</h4>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
